Added entity and player classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,9 +16,15 @@ ENDIF()
 
 # Source files
 set (PROJECT_HEADERS
+    src/headers/player.hpp
+    src/headers/entity.hpp
+    src/headers/map.hpp
     src/headers/game.hpp
     )
 set (PROJECT_SRC
+    src/player.cpp
+    src/entity.cpp
+    src/map.cpp
     src/game.cpp
     src/main.cpp
     )
