Added input handling class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,12 +16,14 @@ ENDIF()
 
 # Source files
 set (PROJECT_HEADERS
+    src/headers/input_handler.hpp
     src/headers/player.hpp
     src/headers/entity.hpp
     src/headers/map.hpp
     src/headers/game.hpp
     )
 set (PROJECT_SRC
+    src/input_handler.cpp
     src/player.cpp
     src/entity.cpp
     src/map.cpp
